# Statistical-Computing

./: CMakeLists.txt  README.md
Core/: error.hpp  version.hpp
Core/Hashing/: hash_combine.inl  hash_range.inl  universal_hash.cpp
Data preprocessing/: preprocessing.cpp  preprocessing.h
Descriptive statistics/: descriptiveStatistics.cpp  descriptiveStatistics.h  main.cpp
Descriptive statistics/Central Tendency/: data.csv  dynamic_statistics.cpp  dynamic_statistics.h  dynamic_statistics.tpp
Descriptive statistics/Central Tendency /: Makefile  dynamic_statistics.h  main.cpp
Descriptive statistics/Distributions/: stats_descriptive_distributions.py
Descriptive statistics/Measures of Dispersion/: DynamicStatistics.h  DynamicStatistics.tpp  dispersion.h  main.cpp
Probability/: likelihood.hpp  likelihood.inl  measures.hpp  measures.inl  random_variable.hpp  rv_traits.hpp
Probability Distributions/: probability_distributions.cpp  probability_distributions.h
Probability/Distributions/: bernoulli.hpp  distributions.inl  normal.hpp
Probability/Distributions/Random Variables/: bernoulli_rv.hpp  normal_rv.hpp  normal_rv.inl
Rcpp/Bayesian Inference/src/: bayesian_model.cpp
Rcpp/Bayesian linear regression/R/: run_mcmc.r
Rcpp/Estimators/: Estimators.cpp  Estimators.hpp
Statistical Inference/Bayesian linear regression/src/: mcmc_sampler.cpp
Statistical Inference/Linear Regression/: slr.cpp
Statistical Inference/Linear Regression/Single Parameter/: slr.h
Statistical Inference/R/: bayesian_model.r
Statistical Inference/src/: bayesian_model.h
Statistics/: cross_stats.inl
cmake/: statConfig.cmake.in
include/: stat.hpp
include/integration/: adaptive.hpp  adaptive.inl  integrator_concepts.hpp  monte_carlo.hpp
include/stat/core/: concepts.hpp  config.hpp
include/stat/measures/: running_mean.hpp  running_variance.inl
include/stat/probability/: entropy.hpp  entropy.inl  random_variable.inl  rv_traits.hpp
include/stat/tests/: CMakeLists.txt  bayesian_kernel.cpp
tests/: CMakeLists.txt  sprinkler_test.cpp
(+65 files in other folders)
